syntax = "proto3";

option csharp_namespace = "Larp.Proto.FifthEdition";

package larp.e5;

message Vantage {
    string name = 1;
    string title = 2;
    int32 rank = 3;
    bool physical = 4;
}

message Religion {
    string name = 1;
    string title = 2;
}

message HomeChapter {
    string name = 1;
    string title = 2;
}

enum SpellType {
    SPELL_TYPE_BOLT = 0;
    SPELL_TYPE_GESTURE = 1;
    SPELL_TYPE_SPRAY = 2;
    SPELL_TYPE_VOICE = 3;
    SPELL_TYPE_STORM = 4;
    SPELL_TYPE_ROOM = 5;
    SPELL_TYPE_GESTURE_OR_VOICE = 6;
}

message Spell {
    string name = 1;
    SpellType type = 2;
    string category = 3;
    int32 mana = 4;
    string effect = 5;
}